Fix Annotation, Diagnostic, Trace, Experiment async api